# localemr-cluster

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Pipfile  README.md  entrypoint.sh  main.py  test.sh
.github/workflows/: main.yaml  release.yaml
conf/: core-site.xml
init/: .env  entrypoint
src/: filters.rs  handlers.rs  main.rs  models.rs  tests.rs
test/: test_main.py
