[package]
name = "localemr-container"
version = "0.1.0"
authors = ["da.lum <david.lum91@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
log = "0.4.11"
futures = "0.3.7"
pretty_env_logger = "0.4.0"
